apps/pce/pce-www/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: www-pce
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-http01"
    nginx.ingress.kubernetes.io/rewrite-target: "https://portycommunityenergy.wordpress.com/"
spec:
  tls:
    - hosts:
        - www.portycommunityenergy.org
        - portycommunityenergy.org
      secretName: ingress-www-pce-tls
  ingressClassName: nginx
  rules:
    - host: www.portycommunityenergy.org
    - host: portycommunityenergy.org
